walls & rotation degrees
& ordre X Y Z

--- a/index.html
+++ b/index.html
@@ -107,7 +107,6 @@
                         </div>
                     </div>
                 </div>
-              </div>
               <div class="panel panel-default">
                 <button type="button" class="nav-justified btn btn-primary collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#collapseTwo">
                   Zones
@@ -132,35 +131,35 @@
                 </li>
                 <li role="presentation">
                     <input type="number" value="1" id="taillex" class="ungrp" />
-                    <p class="ungrp">Taille x</p>
+                    <p class="ungrp">Taille X</p>
                 </li>
                 <li role="presentation">
                     <input type="number" value="1" id="tailley" class="hiden ungrp" />
-                    <p class="hiden ungrp">Taille y</p>
+                    <p class="hiden ungrp">Taille Y</p>
                 </li>
                 <li role="presentation">
                     <input type="number" value="1" id="taillez" class="hiden ungrp" />
-                    <p class="hiden ungrp">Taille z</p>
-                </li>
-                <li role="presentation">
-                    <input type="number" value="0" id="posy" class="ungrp" />
-                    <p class="ungrp">Pos Y</p>
+                    <p class="hiden ungrp">Taille Z</p>
                 </li>
                 <li role="presentation">
                     <input type="number" value="0" id="posx" class="ungrp" />
                     <p class="ungrp">Pos X</p>
                 </li>
                 <li role="presentation">
+                    <input type="number" value="0" id="posy" class="ungrp" />
+                    <p class="ungrp">Pos Y</p>
+                </li>
+                <li role="presentation">
                     <input type="number" value="0" id="posz" class="ungrp" />
                     <p class="ungrp">Pos Z</p>
                 </li>
                 <li role="presentation">
-                    <input type="number" value="0.0" id="roty" class="ungrp" />
-                    <p class="ungrp">Rotation Y</p>
-                </li>
-                <li role="presentation">
                     <input type="number" value="0.0" id="rotx" class="ungrp" />
                     <p class="ungrp">Rotation X</p>
+                </li>
+                <li role="presentation">
+                    <input type="number" value="0.0" id="roty" class="ungrp" />
+                    <p class="ungrp">Rotation Y</p>
                 </li>
                 <li role="presentation">
                     <input type="number" value="0.0" id="rotz" class="ungrp" />
