--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                                 <option value="line">Ligne</option>
                                 <option value="plane">Rectangle</option>
                                 <option value="circle">Cercle</option>
+                                <option value="trapezoid">Trapèze</option>
                             </select>
                             <button class="btn btn-info nav-justified" id="btn_add">Ajouter</button>
                             <button class="nav-justified btn btn-danger" id="btn_sup">Supprimer</button>
