--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 </a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">A propos</a></li>
+                    <li><a href="Apropos.html">A propos</a></li>
                 </ul>
             </li>
             <li role="presentation"><a id="fullscreenButton">Fullscreen</a></li>
