Save & load updated, zoneLinker

--- a/index.html
+++ b/index.html
@@ -190,7 +190,12 @@
                         <div class="btn-group grp">
                             <button class="btn btn-xs" id="btnmoinsz">-</button>
                             <button class="btn btn-xs" id="btnplusz">+</button>
-                        </div>Pos z</li>
+                        </div>Pos z
+                    </li>
+                    <li role="presentation">
+                        <input type="number" value="-1" id="linker" class="ungrp" />
+                        <p class="ungrp">ZoneLinker</p>
+                    </li>
             </ul>
         </footer>
     </div>
